# mcp-minimal

./: README.md  pyproject.toml
mcp-minimal/: __main__.py
